# acspype

./: .buildinfo  .gitignore  .readthedocs.yml  LICENSE  PIPELINE.md  PROCESSING.md  README.md  __.readthedocs.yml  acspype.html  genindex.html  index.html  objects.inv  other_docs.html  py-modindex.html  pyproject.toml  pytest.ini  readme_link.html  requirements.txt  scratch.ipynb  search.html  searchindex.js
.doctrees/: acspype.doctree  environment.pickle  index.doctree  other_docs.doctree  readme_link.doctree
.github/workflows/: sphinx.yml
_modules/: index.html
_modules/acspype/: dev.html  experimental.html  packet.html  processing.html  qaqc.html  stream.html  structures.html  tscor.html
_modules/acspype/utils/: core.html  ooi.html
_sources/: acspype.rst.txt  other_docs.rst.txt
_sphinx/: requirements.txt
_sphinx/_build/doctrees/: acspype.doctree  acspype.utils.doctree  environment.pickle  index.doctree
_sphinx/_build/html/: .buildinfo  acspype.html  acspype.utils.html  index.html  objects.inv  py-modindex.html  search.html
_sphinx/_build/html/_modules/acspype/: dev.html  processing.html  qaqc.html  structures.html  tscor.html
_sphinx/_build/html/_modules/acspype/utils/: core.html
_sphinx/_build/html/_sources/: acspype.utils.rst.txt
_sphinx/_source/: acspype.rst  conf.py  index.rst
acspype/: __init__.py  _checks.py  core.py  dev.py  discontinuity.py  experimental.py  metadata.yaml  packet.py  processing.py  qaqc.py  serial.py  stream.py  structures.py  ts4cor.py  tscor.py  tutorial.py
acspype/utils/: __init__.py  core.py  ooi.py
acspype/v2/: computation.py  conversion.py  correction.py  structures.py
dev_tools/: dev_tools_README.md  requirements.txt  shimada_merger.ipynb  shimada_plots.ipynb
dev_tools/tscor/: TS4.cor  ts4cor_py_conversion.ipynb  ts4cor_py_conversion.py
docs/: acspype.rst  acspype.utils.rst  make.bat  requirements.txt  rtd-require.txt  rtd-requirement.txt
docs/_build/doctrees/: acspype.doctree  environment.pickle
docs/_build/html/: genindex.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/acspype/: packet.html  stream.html
docs/_build/html/_modules/acspype/utils/: ooi.html
docs/_build/html/_sources/: acspype.rst.txt
docs/_source/: acspype.rst  acspype.utils.rst  conf.py  index.rst  other_docs.rst  readme_link.rst
docs/docs/: requirements.txt
docs/docs/source/: README.md  acspype.utils.rst  api_reference.rst  conf.py  index.rst  modules.rst
docs/jupyter_execute/examples/: ooi_ce02shsp.ipynb  serial_with_device_file.ipynb
docs/source/: EXAMPLES.rst  NAMING_CONVENTIONS.md  PROCESSING.md  README.md  REFERENCE_MATERIAL.md  acspype-reorder.rst  acspype.rst  acspype.utils.rst  conf.py  index.rst  modules.rst
docs/source/examples/: ooi_ce02shsp.ipynb  serial_with_device_file.ipynb
examples/: flowthrough_shimada_202405.ipynb  ooi_ce02shsm.ipynb  ooi_ce02shsp.ipynb  scratch.ipynb  serial_no_device_file.ipynb  serial_with_device_file.ipynb  shimada_202405.ipynb
examples/_scratch/: ce02shsp_offset.ipynb
examples/scratch/: shimada_202405_full.ipynb
examples/tutorial_data/: ACS-00412_2023-05-10.dev
info/: NAMING_CONVENTIONS.md  PROCESSING.md  REFERENCE_MATERIAL.md
src/acspype/: __init__.py  dev.py  ts4cor.py
src/acspype/utils/: core.py
tests/: test_acsdev.py  test_simulate_serial_daq.py  test_singleton.py  test_singleton_compute_external_temperature.py  test_singleton_compute_internal_temperature.py  test_singleton_compute_uncorrected.py  test_singleton_parsed_packet.py  test_ts4cor_reader.py  test_xarray.py  test_xr_compute_external_temperature.py  test_xr_compute_internal_temperature.py  test_xr_compute_uncorrected.py
